<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-speech-sandbox</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <distributionManagement>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/umjammer/vavi-speech-sandbox</url>
    </repository>
  </distributionManagement>

  <profiles>
    <profile>
      <id>local (not on jitpack)</id>
      <activation>
        <os>
          <family>mac</family>
          <arch>x86_64</arch>
        </os>
        <property>
          <name>env.JITPACK</name>
          <value>!true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.3.0</version>
            <executions>
              <execution>
                <id>copy</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>copy</goal>
                </goals>
                <configuration>
                  <artifactItems>
                    <artifactItem>
                      <groupId>org.rococoa</groupId>
                      <artifactId>rococoa-core</artifactId>
                      <type>dylib</type>
                      <overWrite>false</overWrite>
                      <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
                      <destFileName>librococoa.dylib</destFileName>
                    </artifactItem>
                  </artifactItems>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
      <dependencies>
        <dependency>
          <groupId>org.rococoa</groupId>
          <artifactId>rococoa-core</artifactId>
          <version>0.8.5</version>
        </dependency>
      </dependencies>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <argLine>
            --add-opens java.base/java.lang=ALL-UNNAMED
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
          </argLine>
          <includes>
            <include>**/*</include>
          </includes>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>chatgpt-java</id>
      <url>https://raw.github.com/AcaiSoftware/chatgpt-java/repository/</url>
    </repository>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/umjammer/*</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.9.3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.9</version>
    </dependency>

    <dependency>
      <groupId>io.github.barqawiz</groupId>
      <artifactId>intellijava.core</artifactId>
      <version>0.8.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.10.1</version>
    </dependency>

    <dependency>
      <groupId>gg.acai</groupId>
      <artifactId>chatgpt-java</artifactId>
      <version>1.0.2</version>
    </dependency>

    <dependency>
      <groupId>vavi</groupId>
      <artifactId>vavi-speech2</artifactId>
      <version>0.0.9-SNAPSHOT</version>
      <exclusions>
        <exclusion>
          <groupId>com.github.umjammer</groupId>
          <artifactId>klab-commons-cli</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency> <!-- markdown -->
      <groupId>com.vladsch.flexmark</groupId>
      <artifactId>flexmark-all</artifactId>
      <version>0.64.0</version>
      <exclusions>
        <exclusion>
          <groupId>org.jsoup</groupId>
          <artifactId>jsoup</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
<dependency>
  <groupId>org.jsoup</groupId>
  <artifactId>jsoup</artifactId>
  <version>1.15.4</version>
</dependency>

    <dependency>
      <groupId>vavi</groupId>
      <artifactId>vavi-net-auth-common</artifactId>
      <version>0.1.7-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>org.eclipse.jetty.websocket</groupId>
      <artifactId>javax-websocket-client-impl</artifactId>
      <version>9.4.49.v20220914</version>
    </dependency>

    <dependency>
      <groupId>org.klab</groupId>
      <artifactId>klab-commons-cli</artifactId>
      <version>1.3.3-SNAPSHOT</version>
    </dependency>

    <dependency> <!-- html → text -->
      <groupId>ch.x28.inscriptis</groupId>
      <artifactId>inscriptis</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency> <!-- repl -->
      <groupId>org.jline</groupId>
      <artifactId>jline</artifactId>
      <version>3.22.0</version>
    </dependency>

<!--
    <dependency>
      <groupId>com.github.kwhat</groupId>
      <artifactId>jnativehook</artifactId>
      <version>2.2.2</version>
    </dependency>
-->

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.5</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
